k8s/manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: pp-frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
