k8s/manifests/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-svc
  labels:
    app: matching-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-svc
  template:
    metadata:
      labels:
        app: matching-svc
    spec:
      containers:
        - name: matching-svc
          image: pp-matching
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matching-svc
  name: matching-svc
spec:
  selector:
    app: matching-svc
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
