k8s/manifests/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc
  namespace: default
  labels:
    app: user-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
        - name: user-svc
          image: pp-user
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-svc
  name: user-svc
spec:
  selector:
    app: user-svc
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
