k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /api/user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-svc
                port:
                  number: 8000
          - path: /api/matching(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: matching-svc
                port:
                  number: 8001
          - path: /api/collaboration(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: collaboration-svc
                port:
                  number: 8002
          - path: /api/history(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: history-svc
                port:
                  number: 8003
          - path: /api/question(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: question-svc
                port:
                  number: 8004
